# Flash3D

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flash3d_depth_anything.yaml  flash3d_gaussian_splatting.yaml  flash3d_nerf.yaml  flash3d_point_cloud.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Depth-Estimation.md  FAQ.md  Gaussian-Splatting.md  Home.md  Installation.md  NeRF.md  Point-Clouds.md  Quick-Start.md
examples/: benchmark_3d.py  depth_estimation.py  gaussian_splatting.py  nerf_reconstruction.py  point_cloud_processing.py
flash3d/: __init__.py  cli.py  registry.py
flash3d/analytics/: __init__.py  benchmark.py  metrics.py
flash3d/cfg/: __init__.py  config.py
flash3d/data/: __init__.py  colmap_loader.py  colmap_utils.py  datasets.py  transforms.py
flash3d/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flash3d/geometry/: __init__.py  depth.py  depth_anything.py  mesh.py  point_cloud.py  texture.py  transforms_3d.py
flash3d/models/: __init__.py  flash3d_model.py  lora.py
flash3d/models/architectures/: __init__.py  feed_forward_3dgs.py  gaussian_splatting.py  gaussian_splatting_4d.py  mip_nerf.py  nerf.py
flash3d/models/encodings/: __init__.py  hash_encoding.py
flash3d/models/point_cloud/: __init__.py  pointnet_pp.py
flash3d/rendering/: __init__.py  cameras.py  rasterizer.py  ray_marching.py  sh_utils.py
flash3d/solutions/: __init__.py  depth_estimator.py  scene_reconstructor.py  view_synthesizer.py
flash3d/tasks/: __init__.py  depth_prediction.py  novel_view_synthesis.py  point_cloud_segmentation.py  scene_reconstruction.py
flash3d/utils/: __init__.py  callbacks.py  io.py  visualize.py
tests/: __init__.py  test_comprehensive.py  test_geometry.py  test_models.py  test_new_components.py  test_registry.py
